--- a/angular.json
+++ b/angular.json
@@ -42,6 +42,11 @@
               "@angular/material/prebuilt-themes/azure-blue.css",
               "src/styles.scss"
             ],
+            "stylePreprocessorOptions": {
+              "includePaths": [
+                "src/scss/"
+              ]
+            },
             "scripts": []
           },
           "configurations": {
